namespaces/live.cloud-platform.service.justice.gov.uk/book-a-prison-visit-api-dev/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: book-a-prison-visit-api-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "old-dev"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "prison-visit-booking"
    cloud-platform.justice.gov.uk/slack-alert-channel: "dps_alerts_non_prod"
    cloud-platform.justice.gov.uk/application: "Book a prison visit"
    cloud-platform.justice.gov.uk/owner: "Prisoner Communications: prisonvisitsbooking@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/visit-scheduler.git"
    cloud-platform.justice.gov.uk/team-name: "book-a-prison-visit"
